# popf-clustered-rooms

./: CMakeLists.txt  README.md  package.xml
src/VALfiles/: CMakeLists.txt  SimpleEval.cpp  SimpleEval.h  ToFunction.cpp  ToFunction.h  TypedAnalyser.cpp  TypedAnalyser.h  instantiation.cpp  instantiationConstraint.cpp
src/VALfiles/parsing/: CMakeLists.txt  ptree.h
src/popf/: CMakeLists.txt  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  partialordertransformer.cpp  popfMain.cpp
